tests/ui/imports/extern-crate-used.stderr
error: unused extern crate
  --> $DIR/extern-crate-used.rs:18:1
   |
LL | extern crate core;
   | ^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/extern-crate-used.rs:6:9
   |
LL | #![deny(unused_extern_crates)]
   |         ^^^^^^^^^^^^^^^^^^^^
help: remove it
   |
LL - extern crate core;
LL +
   |

error: aborting due to 1 previous error

